#                    "Merged from", "Cleanup", "Issue", "Adjustment"           #
################################################################################
          1         2         3         4         5         6         7
01234567890123456789012345678901234567890123456789012345678901234567890123456789
-----------------+-----------+--------------------------------------------------

DG-2009-12-03-0: Enhancem.:  Core binding functional test added.
                 Review:     JG

CR-2009-12-03-0: Bugfix:     fixed setup/cleanup of reprioritization test
                 Review:     SH

RH-2009-12-03-0: Enhancem.:  o new method has_check_error (finds out if
                               there was an error during test run, useful
                               for debugging)
                             Hedeby: 
                             o New test for issue 705
                             o New methods hedeby_start_jvm, hedeby_stop_jvm and
                               hededby_restart_jvm
                 Review:     TB

CR-2009-12-02-0: Enhancem.:  Added new test for qrsh: extensive_qrsh
                 Review:     MD

DG-2009-12-01-0: Cleanup:    Added additional parameter to get_qstat_j_info
                 Review:     CR

CR-2009-11-30-0: Bugfix:     usage test: fixed job output parsing problem which
                               leads to lost job output messages.
                 Review:     SH

CR-2009-11-25-1: Bugfix:     tight_integration test reported error for qmaster 
                             message logging for killed tightly parallel task
                             in master_killed scenario which is not an error.
                 Review:     DG

TB-2009-11-25-0: Enhancem.:  o enhanced SDM components/executor/reload test
                               for issue 694
                             o enhanced create_bundle_string function to work
                               with parameters with formatting info (like